<resources>
    <string name="app_name">Covid19 Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_frg_txt">
        This data changes rapidly
        and might not reflect some cases still being reported.
        You may refresh records periodically to reflect changes.
    </string>
    <string name="total_cases">Total Cases</string>
    <string name="hypen">-</string>
    <string name="new_cases">New Cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="new_deaths">New Deaths</string>
    <string name="new_recovered">New Recovered</string>
    <string name="country_name">Country Name</string>
    <string name="cases">Cases</string>
    <string name="today_cases">Today Cases</string>
    <string name="deaths">Deaths</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="today_recovered">Today Recovered</string>
    <string name="search">Search</string>
</resources>