<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="2dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/country_txt"
            android:text="@string/country_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country_txt">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cases"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/case_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/hypen"
                    android:textColor="@color/black"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_cases"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/today_case_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/hypen"
                    android:textColor="@color/black"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deaths"
                    android:textColor="#F10808"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/deaths_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/hypen"
                    android:textColor="#F10808"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_deaths"
                    android:textColor="#F10808"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/today_death_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/hypen"
                    android:textColor="#F10808"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recovered"
                    android:textColor="#16C51D"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/recovered_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/hypen"
                    android:textColor="#16C51D"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_recovered"
                    android:textColor="#16C51D"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/today_recovered_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/hypen"
                    android:textColor="#16C51D"/>

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>