<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D8D1D1"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:text="@string/home_frg_txt"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_rect"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/shape_circle2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/total_cases"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/total_cases_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hypen"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_rect"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/shape_circle2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/new_cases"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/new_cases_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hypen"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_rect"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/shape_circle1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/total_deaths"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/total_deaths_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hypen"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_rect"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/shape_circle1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/new_deaths"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/new_deaths_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hypen"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_rect"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/shape_circle3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Total Recovered"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/total_recovered_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_rect"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/shape_circle3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/new_recovered"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/new_recovered_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hypen"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>